opam-version: "2.0"
maintainer: "unixjunkie@sdf.org"
authors: ["Francois Berenger"]
homepage: "https://github.com/UnixJunkie/oplsr"
bug-reports: "https://github.com/UnixJunkie/oplsr/issues"
dev-repo: "git+https://github.com/UnixJunkie/oplsr.git"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.0.0"}
  "dolog" {>= "4.0.0"}
  "batteries"
  "minicli" {with-test & >= "5.0.0"}
  "cpm" {with-test}
  "molenc"
]
synopsis: "OCaml wrapper for R pls package"
description: """TODO
"""
# url {
#   src: "https://github.com/UnixJunkie/oplsr/archive/XXX"
#   checksum: "md5=YYY"
# }
