(library
 (name oplsr)
 (public_name oplsr)
 (modules utls PLS)
 (libraries dolog batteries))

(executables
  (names to_dense)
  (public_names oplsr_to_dense)
  (modules to_dense)
  (libraries dolog minicli batteries oplsr))

;; never installed executables, because they don't have a public name
(executables
 (names test)
 (modules test)
 (libraries dolog minicli cpm batteries oplsr))
